tests/algorithms/transpiler/Zig/graphs/prim.error
exit status 1
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/prim.zig:177:41: error: expected type '[][]i64', found '*[0]i64'
        G.put(i, @constCast((&[_]i64{}))[0..]) catch unreachable;
                 ~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/workspace/mochi/tests/algorithms/transpiler/Zig/graphs/prim.zig:177:41: note: pointer type child 'i64' cannot cast into pointer type child '[]i64'
/opt/zig-0.14.0/lib/std/hash_map.zig:321:48: note: parameter type declared here
        pub fn put(self: *Self, key: K, value: V) Allocator.Error!void {
                                               ^
referenced by:
    main: /workspace/mochi/tests/algorithms/transpiler/Zig/graphs/prim.zig:196:20
    main: /opt/zig-0.14.0/lib/std/start.zig:647:22
    3 reference(s) hidden; use '-freference-trace=5' to see all references